# bzip2

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  libbz2.def
.travis/: run.sh
cmake/: runtest.cmake
